Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/OverrideChecks/T4720356a.out
T4720356a.java:16:16: compiler.err.override.incompatible.ret: (compiler.misc.cant.override: m(), p1.T4720356c, m(), p1.T4720356a), int, void
1 error
